# saas-foundation-project

./: .gitattributes  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
src/: db.sqlite3
src/commando/management/commands/: vendor_pull.py
src/helpers/: downloader.py
src/saashome/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/saashome/templates/: base.html  home.html
src/saashome/templates/nav/: navbar.html
src/visits/: models.py
src/visits/migrations/: 0001_initial.py
