[project]
name = "SAAS-Foundation"
version = "0.0.1"
description = ""
authors = [
    {name = "Nahid Hasan Riad", email = "nhriyaad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "python-decouple (>=3.8,<4.0)"
]


[tool.poetry]
package-mode = false