[project]
name = "saas"
version = "0.1.0"
description = "SAAS Foundation Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.6",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.10",
    "python-decouple>=3.8",
    "requests>=2.32.5",
]
